# rtp-midi-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build_and_test.yml  pr_title_check.yml  release.yml
examples/: invite_to_session.rs  log_messages.rs  send_midi.rs
src/: clock_sync_packet.rs  control_packet.rs  delta_time.rs  lib.rs  main.rs  midi_command.rs  midi_packet.rs  participant.rs  rtp_midi_server.rs  rtp_midi_session.rs  session_initiation_packet.rs  util.rs
src/packet/: clock_sync_packet.rs  control_packet.rs  midi_packet.rs  mod.rs  packet.rs  session_initiation_packet.rs
src/packet/control_packets/: clock_sync_packet.rs  control_packet.rs  session_initiation_packet.rs
src/packet/midi_packet/: delta_time.rs  midi_command.rs  midi_command_list_body.rs  midi_command_list_header.rs  midi_command_section.rs  midi_packet.rs  midi_packet_header.rs  midi_timed_command.rs  mod.rs
src/packet/midi_packet/recovery_journal/: control_change_chapter.rs  program_change_chapter.rs  recovery_journal.rs
src/packet/midi_packet/recovery_journal/channel_journal/: control_change_chapter.rs  mod.rs  program_change_chapter.rs
src/packet/midi_packet/recovery_journal/system_journal/: chapter_d.rs  system_common.rs  system_journal.rs
src/packet/midi_packets/: midi_command.rs  midi_command_list_body.rs  midi_command_list_header.rs  midi_packet.rs  midi_timed_command.rs
src/packet/midi_packets/recovery_journal/system_journal/: mod.rs
src/packets/: error.rs  mod.rs  packet.rs
src/packets/control_packets/: clock_sync_packet.rs  control_packet.rs  mod.rs  session_initiation_packet.rs  util.rs
src/packets/midi_packets/: delta_time.rs  delta_time_zero_alloc.rs  midi_command.rs  midi_command_iterator.rs  midi_command_list_body.rs  midi_command_list_header.rs  midi_command_zero_alloc.rs  midi_event.rs  midi_message_ext.rs  midi_packet.rs  midi_packet_builder.rs  midi_packet_header.rs  midi_packet_header_zero_alloc.rs  midi_packet_zero_alloc.rs  midi_timed_command.rs  midi_timed_command_zero_alloc.rs  mod.rs  rtp_midi_message.rs  util.rs
src/packets/midi_packets/recovery_journal/: mod.rs  recovery_journal.rs
src/packets/midi_packets/recovery_journal/channel_journal/: channel_journal.rs
src/packets/midi_packets/recovery_journal/system_journal/: chapter_d.rs  system_common.rs
src/recovery_journal/: control_change_chapter.rs  mod.rs  program_change_chapter.rs  recovery_journal.rs
src/sessions/: control_port.rs  host_syncer.rs  invitation.rs  invite_responder.rs  invite_response.rs  mdns.rs  midi_port.rs  mod.rs  rtp_midi_session.rs  rtp_port.rs
src/sessions/events/: event_handling.rs
tests/: cleanup.rs  control_packet.rs  integration_test.rs  mod.rs
tests/common/: mod.rs
