[profile.release-with-debug]
inherits = "release"
debug = true

[package]
name = "rtpmidi"
version = "0.1.0"
edition = "2024"

[dependencies]
mdns-sd = { version = "0.13.9", optional = true }
hostname = { version = "0.4.1", optional = true }
local-ip-address = { version = "0.6.5", optional = true }
colog = { version = "1.3.0", optional = true }
log = "0.4.27"
tokio = { version = "1" }
byteorder = "1"
rand = "0.9.1"

[features]
mdns = ["mdns-sd", "hostname", "local-ip-address"]
default = ["tokio/net", "tokio/time", "tokio/rt", "tokio/macros", "tokio/sync"]
examples = ["default", "tokio/rt-multi-thread", "colog"]
