[profile.release-with-debug]
inherits = "release"
debug = true

[package]
name = "rtpmidi"
version = "0.2.1"
edition = "2024"
authors = ["Jesse Higginson "]
description = "A library for RTP-MIDI / AppleMIDI"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/iKadmium/rtp-midi-rs"
repository = "https://github.com/iKadmium/rtp-midi-rs"
include = ["src", "examples", "tests", "Cargo.toml", "README.md", "LICENSE.md"]

[dependencies]
mdns-sd = { version = "0.13.9", optional = true }
hostname = { version = "0.4.1", optional = true }
local-ip-address = { version = "0.6.5", optional = true }
colog = { version = "1.3.0", optional = true }
log = "0.4.27"
tokio = { version = "1" }
byteorder = "1"
rand = "0.9.1"
futures = "0.3.31"
tokio-util = "0.7.15"

[features]
mdns = ["mdns-sd", "hostname", "local-ip-address"]
examples = ["default", "tokio/rt-multi-thread", "colog", "tokio/signal"]
default = ["tokio/net", "tokio/time", "tokio/rt", "tokio/macros", "tokio/sync"]

[dev-dependencies]
serial_test = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
colog = { version = "1.3.0" }
