[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
strip = true
debug = false

[package]
name = "rtpmidi"
version = "0.3.0"
edition = "2024"
authors = ["Jesse Higginson "]
description = "A library for RTP-MIDI / AppleMIDI"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/iKadmium/rtp-midi-rs"
repository = "https://github.com/iKadmium/rtp-midi-rs"
include = ["src", "examples", "tests", "Cargo.toml", "README.md", "LICENSE.md"]

[dependencies]
mdns-sd = { version = "0.13.9", optional = true }
hostname = { version = "0.4.1", optional = true }
local-ip-address = { version = "0.6.5", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
tokio = { version = "1" }
rand = "0.9.1"
futures = "0.3.31"
tokio-util = "0.7.15"
tracing = "0.1.41"
bytes = "1.10.1"
zerocopy = { version = "0.8.26", features = ["derive"] }

[features]
mdns = ["mdns-sd", "hostname", "local-ip-address"]
examples = [
    "default",
    "tokio/rt-multi-thread",
    "tokio/signal",
    "tracing-subscriber",
]
default = ["tokio/net", "tokio/time", "tokio/rt", "tokio/macros", "tokio/sync"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
